# py-sql-tasks

./: .gitignore  .pylintrc  pyproject.toml
config/: config.yaml
data/output/: exportacao_20240321221755.csv
data/scripts/: SELECT_DB.sql  SELECT_TESTE.sql  SELECT_TESTE_LISTA.sql
src/: __init__.py  main.py  tokens.env
utils/: __init__.py  utils.py
